# crawler-rs

./: Cargo.toml  README.md  dev
etc/: notes.md  shell.nix
etc/notes/: async.md  caching.md  egui_notes.md  interface.md
src/: app.rs  crawler.rs  gui.rs  lib.rs  main.rs
