[package]
name = "crawler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
egui_graphs = "0.30.0"
petgraph = "0.8.3"
rand = { version = "0.10.1", features = ["thread_rng"] }
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.27.0"
tokio = { version = "1", features = ["full"] }
