[package]
name = "crawler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
addr = "0.15.6"
crossbeam-channel = "0.5.15"
eframe = "0.34.1"
egui = "0.34.1"
egui_graphs = { version = "0.30.0", features = ["events"] }
fdg-sim = "0.9.1"
flume = "0.12.0"
glam = "0.33.0"
petgraph = "0.8.3"
rand = { version = "0.10.1", features = ["thread_rng"] }
rayon = "1.12.0"
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.27.0"
tokio = { version = "1", features = ["full"] }
